--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>learn JS</title>
 </head>
 <body>
-   <p>hello world</p>
+   <p>Hello world</p>
    <script src="/js/script.js"></script>
 </body>
 </html>
